apps/arr/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app: radarr
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app: radarr
    spec:
      containers:
        - name: radarr
          image: &image lscr.io/linuxserver/radarr:5.18.4
          ports:
            - name: radarr
              containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
        - name: radarr-4k
          image: *image
          ports:
            - name: radarr-4k
              containerPort: 8787
          volumeMounts:
            - mountPath: /config
              name: config-4k
            - mountPath: /media
              name: media
      volumes:
        - name: config
          hostPath:
            path: /var/data/persistence/arr/radarr
            type: DirectoryOrCreate
        - name: config-4k
          hostPath:
            path: /var/data/persistence/arr/radarr-4k
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /var/storage/media
            type: DirectoryOrCreate
