apps/arr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: arr
  labels:
    app.kubernetes.io/name: radarr
    app: radarr
spec:
  ports:
    - port: 7878
      targetPort: radarr
      name: radarr
    - port: 8787
      targetPort: radarr-4k
      name: radarr-4k
  selector:
    app.kubernetes.io/name: radarr
    app: radarr
