apps/arr/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: arr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.222
    traefik.ingress.kubernetes.io/router.entrypoints: local
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.local.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-service
                port:
                  name: radarr
    - host: radarr-4k.local.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-service
                port:
                  name: radarr-4k
  tls:
    - secretName: local-tls
      hosts:
        - radarr.local.boomerok.dev
